--- a/notebook/20191111_plan.md
+++ b/notebook/20191111_plan.md
@@ -2,7 +2,7 @@
 
 **Purpose**: Identify some short term objectives for determining the number of samples we will sequence to examine the broad question of DNA Methylation inheritance in oysters.
 
-**Goal / Timeline**: Have these results ready for Aug 26th 2019 to decided target samples
+**Goal / Timeline**: Have these results ready for Nov. 12th 2019 to decided target samples
 
 **Information that needs to be confirmed**:
 
