--- a/notebook/20200122_planR2.md
+++ b/notebook/20200122_planR2.md
@@ -1,22 +1,33 @@
-# Revised plan for sample sequencing
+# Plan for sample sequencing
 
 **Description** : To look at intergenerational DNA methylation I will be using a **WGBSseq** approach to sequence female (eggs) and larvae (pooled samples on filters) to look at the potential for transmission of epigenetic marks, with a specific focus on identifying marks that are differentially methylated among OA treatments.
 
 **Samples**
-* Eggs from females exposed for 1 month (2 treatments x 8 females per treatment) = 8 samples
-* Zygotes (fertilized eggs reared in control conditions for a couple of hours) = 
-* Larvae  (3 day old D stage larvae) = 
+* Eggs from females exposed for 1 month (2 treatments x 8 females per treatment) = 16 samples
+* Sperm from males exposed for 1 month (2 treatments x 8 males per treatment) = 16 males (to be done by Roberts group)
+* Zygotes (fertilized eggs reared in control conditions for a couple of hours) and Larvae  (3 day old D stage larvae) = **At most** we have 65 samples.
+
+* [Full sample list](https://docs.google.com/spreadsheets/d/1l4f2s0nbyNUgenjXhhB8-FzqPRpRpzZvG_iymL_z-WM/edit#gid=21759176)
 
 * Sample targets will also focus on sampelst that overlap with Elises work on larvae structure using the SEM [LINK](https://github.com/epigeneticstoocean/2018OAExp_larvae/blob/master/notebook/20191111_EliseSampleList.md)
 
 **Sequencing Pipeline**
 * Extraction using omega kit (using our current kit to try out the extraction protocol)
     * Alternative: [Kit Jon used for his larvae stuff](https://www.zymoresearch.com/collections/quick-dna-rna-kits/products/quick-dna-rna-miniprep-plus-kit)
-    * **Note** : library prep. does not need sonicated DNA (bisulfite conversion is responsible for the shearing).
+    * Alternative 2: Spoke with Matt Hare about a lab specific protocol they designed where they successfully extracted dna from a couple hundred larvae (waiting on an email from him with the protocol).
+    * **Note** : Looking into whether we should sonicate our samples before or after bisulfite conversion. Roberts group sonicates then performs bisulfite conversion (i think). GENEWIZ group converts than performs sonication (they are confirming this).
 * Library Prep - [Pico kit](https://www.zymoresearch.com/products/pico-methyl-seq-library-prep-kit)
     * [Protocol](https://files.zymoresearch.com/protocols/_d5455_d5456_picomethylseq.pdf)
-    * We have 50 preps.
-* Pool and Sequence
+    * We have 50 preps (may need to look into ordering more if we want to do two lanes of novaseq).
+    * Duel index design, with a unique combination for **each** sample. This will allow us to pool all individuals and sequence them across two lanes of NovaSeq.
+         * Details below
+* Sequencing
+   * Notes from [GENEWIZ](https://github.com/epigeneticstoocean/2018OAExp_larvae/blob/master/notebook/20200121_GENEWIZConsultation.md) on sequencing.
+   * We should have enough to run at least 2 lanes of NovaSeq S4 (~35 samples per lane WGBS)
+   * Not clear how much PSI-X needs to be spiked into our sample. This may be important for adding diversity into your sequences, and improving illumina performance. In humans they go as high as 30%, which eats up a ton of reads. Given how low the global % methylation is for oysters this may not be necessary.
+   * Options discussed for sequencing
+      * 1 : Start with a single NovaSeq lane with all samples pooled and figure out mean seq. coverage to determine if we will need another lane of seq.
+      * 2 : Start with only a few samples on an lane of hiSeq 3000 using some PSI-X spike in to see if it was necessary for quality sequencing on illumina platform.
 
 **Barcoding Breakdown**
 
