--- a/notebook/20200122_planR2.md
+++ b/notebook/20200122_planR2.md
@@ -53,10 +53,10 @@ RNA PCR Index Primers
 [Order info for illumina small RNA Tru Seq Adapters](https://www.illumina.com/products/by-type/sequencing-kits/library-prep-kits/truseq-small-rna.html)
 
 **Sequencer Targets**
-* Machine :  Illumina 4500
-* Coverage : 40x
+* Machine :  NovaSeq S4
+* Coverage : 25x
 * Expected duplication % : 10% (based on previous data)
-* Bp length : Zymo recommends 50bp (100 bp paired).
+* BP length : Zymo recommends 50bp (150 bp paired).
 
 **Sequence Estimates**
 
